--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Knowledge Online App",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "ngc -p tsconfig.json",
+    "rollup": "rollup -c rollup-config.js",
+    "launchApp": "node app.js",
+    "start": "npm run compile && npm run rollup && npm run launchApp"
   },
   "repository": {
     "type": "git",
@@ -58,6 +62,7 @@
     "angular-in-memory-web-api": "~0.1.15",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "jquery": "^3.1.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.40",
